--- a/web-portal/src/main/webapp/WEB-INF/web.xml
+++ b/web-portal/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,6 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/portalWebContext.xml</param-value>
@@ -36,7 +35,7 @@
 
     <servlet-mapping>
         <servlet-name>SpringMVC</servlet-name>
-        <url-pattern>/api</url-pattern>
+        <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
 
 
