--- a/build.gradle
+++ b/build.gradle
@@ -30,3 +30,20 @@ allprojects {
 }
 
 
+dependencies{
+
+	compile project(':user-manager')
+	compile project(':appinfo-store')
+
+	compile group:"org.springframework",name:"spring-webmvc",version:"${springVersion}"
+	runtime group:"javax.servlet",name:"servlet-api",version:"3.+"
+
+	testCompile group:"org.springframework",name:"spring-test",version:"${springVersion}"
+
+	testCompile 'org.eclipse.jetty:jetty-server:9.3.2.v20150730'
+	testCompile 'org.eclipse.jetty:jetty-webapp:9.3.2.v20150730'
+
+}
+
+apply plugin: 'war'
+apply plugin: 'jetty'
