--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies{
 
 	compile group:"org.springframework",name:"spring-webmvc",version:"${springVersion}"
 	runtime group:"javax.servlet",name:"servlet-api",version:"3.+"
+	runtime "org.apache.logging.log4j:log4j-core:2.3"
+
 
 	testCompile group:"org.springframework",name:"spring-test",version:"${springVersion}"
 
